# DROMON

./: CMakeLists.txt  ReadMe.txt  paraview_curved_surfaces_tip.txt
.cache/clangd/index/: DataOut.cpp.BEF68627400039B1.idx  DataOut.h.B1D4A4D12C702CFE.idx  DoFBase.cpp.BB1EFBC841210D3A.idx  DoFBase.h.388ED1389D859895.idx  DoFGeom.cpp.0BB9390775DB85DA.idx  DoFGeom.h.C8236A09EA42B8F8.idx  DoFGeomBase.cpp.90EF1037CD0445A6.idx  DoFGeomBase.h.4851072FD491BAA5.idx  DoFHandler.cpp.7B2BCFF421705205.idx  DoFHandler.h.D9A08689DBACE141.idx  FEBase.cpp.10CFB888FB2CA155.idx  FEBase.h.AF06444EDB28E19B.idx  FECollection.cpp.67216725CEC23A83.idx  FECollection.h.E1EFE8D26FD986F4.idx  FE_HdivMaxOrtho.cpp.3779833568CF35A5.idx  FE_HdivMaxOrtho.h.0C8D97FC431527A8.idx  GeomBase.cpp.C1C8221FA9199DAF.idx  GeomBase.h.E32864E109EB024B.idx  IteratorRanger.h.EE480444531C95D6.idx  LegendrePFast.h.70C5A9E89B51DD41.idx  Materials.h.04AF7626F2C42CE4.idx  MeshBase.cpp.0617DE21D4D7F45A.idx  MeshBase.h.435BF7844B94F2F8.idx  MeshGenerator.cpp.59BE42C2EA83418F.idx  MeshGenerator.h.5F474B3D43829915.idx  MultiIndex.cpp.366448A330E70CB4.idx  MultiIndex.h.433796DC47216D13.idx  Point.cpp.6ACB8539C64FED49.idx  Point.h.C0C3780A69FDB78A.idx  config.h.64C75152B9FB2476.idx  mesh.cpp.3E2A8AEF561E810C.idx  mesh.h.A8364210D8DDA11F.idx  utility.h.3AC28756E64FECE1.idx
cmake/: DROMONTargets-release.cmake  DROMONTargets.cmake  Installing.cmake
include/: AdjointExcitations.h  DIRECTFN_ET_Singular.h  DIRECTFN_ST_Singular.h  DIRECTFN_Singular.h  DIRECTFN_VT_Singular.h  DoFBase.h  DoFHandler.h  EFIEIntegrator.h  Excitations.h  GalerkinSystem.h  IntegratorBase.h  Kernels.h  MatrixSolving.h  MatrixSolvingPolicies.h  MeshBase.h  MultiIndex.h  Point.h  PostProcessing.h  QuadratureCollection.h  Refinement.h  SubMatrix.h  UniformIntegrator.h  mesh.h  utility.h
include/DROMON/: AdjointExcitations.h  DIRECTFN_ET_Bounds_Functions.h  DIRECTFN_ET_Singular.h  DIRECTFN_ST_Bounds_Functions.h  DIRECTFN_ST_Singular.h  DIRECTFN_Singular.h  DIRECTFN_VT_Bounds_Functions.h  DIRECTFN_VT_Singular.h  DataOut.h  DoFGeom.h  DoFGeomBase.h  DoFMask.h  EFIEIntegrator.h  ErrorEstimation.h  Excitations.h  FEBase.h  FECollection.h  FE_HdivMaxOrtho.h  GalerkinSystem.h  GeomBase.h  IteratorRanger.h  Kernels.h  LegendrePFast.h  Materials.h  MatrixSolving.h  MatrixSolvingPolicies.h  MeshGenerator.h  Point.h  PostProcessing.h  UniformIntegrator.h  config.h
source/: DataOut.cpp  DoFBase.cpp  DoFGeom.cpp  DoFGeomBase.cpp  DoFHandler.cpp  FEBase.cpp  FECollection.cpp  FE_HdivMaxOrtho.cpp  GeomBase.cpp  MeshBase.cpp  MeshGenerator.cpp  MultiIndex.cpp  mesh.cpp
test_build/: AdaptiveSolve-0.vtk  CMakeCache.txt  MC_mu1_sig0p1.txt  MC_mu1_sig0p1_Gcheck.txt  MC_mu1_sig0p1_Gcheck1.txt  MC_mu1_sig0p1_new.txt  MC_mu1_sig0p1_noGcheck.txt  MC_mu1_sig0p1_sphere.txt  MC_mu400_sig25_G.txt  MC_mu400_sig25_G_R.txt  MC_mu400_sig25_G_Rlam.txt  MC_mu400_sig25_G_Rnew.txt  MC_mu400_sig25_Gcheck.txt  MC_mu400_sig25_Gcheck1.txt  MC_mu400_sig25_noG.txt  MC_mu400_sig25_scaledG_R.txt  MC_mu80_sig3.txt  MC_mu80_sig3_plate_analyt.txt  MC_mu80_sig3_sphere.txt  Makefile  cmake_install.cmake  hops  normalDist.txt  normalDist_eps.txt  output.txt
test_build/inputDist/: normalDist_R.txt  normalDist_eps.txt
test_build/output/: MC_mu1_sig0p1_plate.txt  MC_mu1_sig0p1_sphere.txt  MC_mu1_sig0p1_sphere_R.txt  MC_mu80_sig3_plate_analyt.txt  MC_mu80_sig3_plate_noSecondTerms.txt
tests/: CMakeLists.txt  programs.h  test_HOPS.cpp  test_adaptive_refinement_square_plate.cpp  test_jacobian_and_unitary_vectors.cpp  test_mesh_generation.cpp
